--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.44.1",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
+    "react-toastify": "^9.1.3",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.11",
     "styled-normalize": "^8.0.7",
