--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
+    "react-uuid": "^2.0.0",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.11",
     "styled-normalize": "^8.0.7",
